# amad

./: .flake8  .gitignore  .readthedocs.yaml  HISTORY.md  LICENCE  README.md  dev-requirements.txt  doc-requirements.txt  pyproject.toml  requirements.txt
amad/demo/: demo_aircraft_resources.py
amad/demo/notebooks/: Acceleration.ipynb  BenchmarkAero.ipynb  Climb.ipynb  Cruise.ipynb  Crz_point_demo.ipynb  Deceleration.ipynb  DemoAircraftResources.ipynb  Demo_aircraft_optim_dashboard.ipynb  Descent.ipynb  Drag.ipynb  Mission_Simulation_Tutorial.ipynb  OptimizeAircraft.ipynb  Segments_Debugging.ipynb  Support_demo.ipynb  UnitConversions.ipynb  aero_calc_AVL.ipynb  averageSweep.ipynb  cruiseFuel.ipynb  flightVehicleViewer.ipynb  generateAeroGeom.ipynb  liftingArea.ipynb  takeOffLift.ipynb  wingPosition.ipynb
amad/disciplines/aerodynamics/: __init__.py
amad/disciplines/aerodynamics/ports/: aeroPort.py
amad/disciplines/aerodynamics/systems/: aeroCalculateASB.py  aerocalculateAVL.py  baseAeroCalculator.py  drag.py
amad/disciplines/aerodynamics/tools/: AVLto-CSV.py  benchmark_aero.py  benchmark_avl.py  createAeroInterpolationCSV.py  createFlightVehicle.py  flightVehicleViewer.py
amad/disciplines/design/: __init__.py
amad/disciplines/design/ports/: __init__.py  (+1 more)
amad/disciplines/flight_dynamics/: __init__.py
amad/disciplines/mass/: __init__.py
amad/disciplines/performance/: __init__.py
amad/disciplines/powerplant/: __init__.py
amad/disciplines/transverse/: __init__.py
amad/optimization/: optimizeAircraft.py  optimizeSimpleAC.py
amad/optimization/resources/: set_parameters.py
amad/tools/: aircraft_params_reader.py  atmosBADA.py  extToolsCheck.py  pullingFilter.py  unit_conversion.py
amad/tools/tests/: sample_aircraft_params.csv  sample_aircraft_params.xlsx  test_aircraft_params_reader.py  test_atmos_BADA.py  test_ext_tools.py
docs/: requirements.in  requirements.txt
docs/source/: conf.py  index.md  index.rst  usage.md
docs/source/notebooks/: Support_demo.nblink  UnitConversions.nblink
(+57 files in other folders)
