[project]
name = "amad"
version = "0.1.0"
description = "AKKODIS MDAO Aircraft Demonstrator"
authors = [
    { name = "Peter Cairns", email = "peter.cairns@akkodis.com" },
    { name = "André Hochschulz", email = "andre.hochschulz@akkodis.com" },
    { name = "Rafael Rojas Cardenas", email = "Rafael.ROJAS-CARDENAS@akkodis.com" },
]
dependencies = [
    "ambiance==1.3.1",
    "cosapp==0.12.3",
    "AeroSandbox==4.1.1",
    "sarge==0.1.7.post1",
    "psutil==5.9.4",
    "pyvista==0.37.0",
    "nbformat==5.7.0",
    "jupyterlab-pygments==0.1.2",
    "ipywidgets==7.6.5",
    "jupyterlab-widgets==1.0.2",
    "jupyterlab==3.6.7",
    "openpyxl==3.1.1",
    "plotly==5.13.0",
    "pytest==7.4.0",
]
license = { file = "LICENSE" }
