[project]
name = "amad"
version = "0.1.0"
description = "AKKODIS MDAO Aircraft Demonstrator"
keywords = ["MDAO", "Aircraft Flight Physics Model", "CoSApp"]  # Optional
authors = [
    { name = "Peter Cairns", email = "peter.cairns@akkodis.com" },
    { name = "André Hochschulz", email = "andre.hochschulz@akkodis.com" },
    { name = "Rafael Rojas Cardenas", email = "Rafael.ROJAS-CARDENAS@akkodis.com" }
#license = "LICENSE.md"
#readme = "README.md"
# repository = "https://github.com/Akkodis/amad"

]
dependencies = [
    "ambiance==1.3.1",
    "cosapp==0.12.3",
    "AeroSandbox==4.1.1",
    "sarge==0.1.7.post1",
    "psutil==5.9.4",
    "pyvista==0.37.0",
    "nbformat==5.7.0",
    "jupyterlab-pygments==0.1.2",
    "ipywidgets==7.6.5",
    "jupyterlab-widgets==1.0.2",
    "jupyterlab==3.2.4",
    "openpyxl==3.1.1",
    "plotly==5.13.0"
]

[project.optional-dependencies] # Optional
test = ["pytest==7.4.0"]
doc = ["sphinx", "myst-parser", "sphinx_rtd_theme", "nbsphinx", "nbsphinx-link", "sphinx-autoapi", "readthedocs-sphinx-search"]
style = ["black"]
tests = ["amad[test]"]
dev = ["amad[test]", "amad[doc]", "amad[style]", "pip-tools==7.4.0"]
all = ["amad[dev]"]

